<resources>
    <string name="app_name">LogIn</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="question">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="billList">List of Bills</string>
    <string name="historyBill">History of Bills</string>
    <string name="showBills">Show Current Bills</string>
    <string name="btnplus">+</string>
    <string name="btnminus">-</string>
    <string name="createAcc">Create Account</string>
    <string name="firstName">"First Name: "</string>
    <string name="lastName">"Last Name: "</string>
    <string name="email">"Email: "</string>
    <string name="birthdate">"Birthdate:  "</string>
    <string name="confirmPass">"Confirm Password: "</string>
    <string name="addBill">Add a New Bill</string>
    <string name="provider">Provider:</string>
    <string name="dateofissue">Date of issue:</string>
    <string name="dueDate">Due Date:</string>
    <string name="payment">Payment Amount:</string>
    <string name="btnadd">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="question2">Do you need more details about providers?</string>
    <string name="clickHere">CLICK HERE</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="providerList">View Providers List</string>
    <string name="providersList">List of Providers</string>
    <string name="selectOption">Select an option:</string>
    <string name="loginSuccessfull">Login Successfull!</string>
    <string name="enterCorrectPassword">Enter correct password!</string>
    <string name="userDoesntExist">User doesn\'t exist!</string>
    <string name="wait">Wait a few moments</string>
    <string name="progressDialog">ProgressDialog</string>
    <string name="anulare">Canceled</string>
    <string name="logginAs">You are logged as:</string>
    <string name="moveThisBill">Do you want to move this bill?</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="userCreated">User Created</string>
    <string name="error">Error!</string>
</resources>