<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle"
    tools:context=".MainActivity"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:id="@+id/spinner"></Spinner>
    <TextView
        android:layout_height="234dp"
        style="@style/textViewStyle"
        android:paddingVertical="80dp"
        android:text="@string/login"
        android:textSize="50sp"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvUsername"
        android:text="@string/username"
        android:textSize="20sp"

        android:textStyle="bold"
        android:layout_marginHorizontal="50dp"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_marginHorizontal="100px"
        android:layout_marginBottom="30px"></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="50dp"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPass"
        android:layout_marginHorizontal="100px"
        android:inputType="textPassword"
        android:layout_marginBottom="30px"></EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        android:layout_marginHorizontal="370px"
        android:layout_marginBottom="50px"
        android:layout_gravity="center"
        android:text="@string/login"></Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignUp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="#0089BA"></TextView>
        </LinearLayout>
    </ScrollView>



        



</LinearLayout>