<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle"
    tools:context=".AddBill">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/textViewStyle"
                android:layout_height="190dp"
                android:paddingVertical="70dp"
                android:text="@string/addBill"
                android:textSize="50sp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/provider"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/etProd"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dateofissue"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDataEmitere"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dueDate"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDataScadenta"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/payment"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSuma"></EditText>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    style="@style/buttonStyle"
                    android:text="@string/addBill"
                    android:onClick="addBill"
                    android:layout_marginLeft="30dp"
                    android:layout_alignParentLeft="true">
                    </Button>
                <Button
                    style="@style/buttonStyle"
                    android:id="@+id/bCancelBill"
                    android:layout_marginRight="30dp"
                    android:layout_alignParentRight="true"
                    android:onClick="cancel"
                    android:text="@string/cancel"></Button>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>